Address some test orchestration warnings.